--- a/custom_components/divoom_pixoo/translations/en.json
+++ b/custom_components/divoom_pixoo/translations/en.json
@@ -4,51 +4,47 @@
     "step": {
       "user": {
         "title": "Connect to your Divoom Pixoo",
-        "data": {
-          "ip_address": "IP Address"
-        }
+        "description": "Please enter the IP address of your Divoom Pixoo device."
       }
     },
     "error": {
-      "cannot_connect": "Failed to connect to the Divoom Pixoo, please check your IP address",
-      "invalid_auth": "Invalid authentication",
-      "unknown": "An unknown error occurred"
+      "cannot_connect": "Failed to connect to the Divoom Pixoo device. Please check your IP address and try again."
     },
     "success": {
-      "title": "Success",
-      "content": "Your Divoom Pixoo is now connected"
+      "title": "Connection Successful",
+      "description": "Your Divoom Pixoo device is now connected."
     }
   },
   "service": {
     "show_message": {
-      "description": "Display a message on the Divoom Pixoo.",
+      "description": "Display a message on the Divoom Pixoo device.",
       "fields": {
         "entity_id": {
-          "description": "The entity_id of the Divoom Pixoo device.",
+          "description": "The entity ID of the Divoom Pixoo device to display the message.",
           "example": "sensor.divoom_pixoo"
         },
         "message": {
-          "description": "The message text to display.",
-          "example": "Hello World"
+          "description": "The message text you want to display on the device.",
+          "example": "Hello World!"
         },
         "position": {
-          "description": "The position on the screen to start the message (x, y coordinates).",
+          "description": "The position on the Pixoo screen where the message should start (x, y coordinates).",
           "example": "[10, 20]"
         },
         "color": {
-          "description": "The RGB color for the message.",
+          "description": "The RGB color of the message text.",
           "example": "[255, 255, 255]"
         },
         "font": {
-          "description": "The font to use for the message.",
+          "description": "The font type to use for the message text.",
           "example": "FONT_GICKO"
         },
         "image": {
-          "description": "Path to the image to display.",
-          "example": "/config/images/image.png"
+          "description": "The path to the image file you want to display.",
+          "example": "/config/images/your_image.png"
         },
         "image_position": {
-          "description": "The position on the screen to place the image (x, y coordinates).",
+          "description": "The position on the Pixoo screen where the image should be placed (x, y coordinates).",
           "example": "[30, 40]"
         }
       }
