--- a/custom_components/divoom_pixoo/translations/en.json
+++ b/custom_components/divoom_pixoo/translations/en.json
@@ -1,6 +1,6 @@
 {
+  "title": "Divoom Pixoo",
   "config": {
-    "title": "Divoom Pixoo",
     "step": {
       "user": {
         "title": "Connect to your Divoom Pixoo",
@@ -11,40 +11,40 @@
       "cannot_connect": "Failed to connect to the Divoom Pixoo device. Please check your IP address and try again."
     },
     "success": {
-      "title": "Connection Successful",
-      "description": "Your Divoom Pixoo device is now connected."
+      "title": "Success",
+      "content": "Your Divoom Pixoo is now connected."
     }
   },
   "service": {
     "show_message": {
-      "description": "Display a message on the Divoom Pixoo device.",
+      "description": "Display a message on the Divoom Pixoo.",
       "fields": {
         "entity_id": {
-          "description": "The entity ID of the Divoom Pixoo device to display the message.",
+          "description": "The entity_id of the Divoom Pixoo device.",
           "example": "sensor.divoom_pixoo"
         },
         "message": {
-          "description": "The message text you want to display on the device.",
-          "example": "Hello World!"
+          "description": "The message text to display.",
+          "example": "Hello World"
         },
         "position": {
-          "description": "The position on the Pixoo screen where the message should start (x, y coordinates).",
+          "description": "The position on the screen to start the message (x, y coordinates).",
           "example": "[10, 20]"
         },
         "color": {
-          "description": "The RGB color of the message text.",
+          "description": "The RGB color for the message.",
           "example": "[255, 255, 255]"
         },
         "font": {
-          "description": "The font type to use for the message text.",
+          "description": "The font type for the message. Currently only 'FONT_GICKO' and 'FONT_PICO_8' are supported.",
           "example": "FONT_GICKO"
         },
         "image": {
-          "description": "The path to the image file you want to display.",
-          "example": "/config/images/your_image.png"
+          "description": "The path to the image file to display on the Pixoo.",
+          "example": "/config/images/image.png"
         },
         "image_position": {
-          "description": "The position on the Pixoo screen where the image should be placed (x, y coordinates).",
+          "description": "The position on the screen to place the image (x, y coordinates).",
           "example": "[30, 40]"
         }
       }
